Added mgrepl refactor for added filter_call_stack

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,21 @@ S3method(call_label,default)
 export("%>%")
 export(call_label)
 export(recovery)
+export(recovery_ignore_function_class)
+export(recovery_ignore_namespace)
+export(recovery_opt)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,lag)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,functions)
 importFrom(methods,getPackageName)
 importFrom(pkgcond,"%!in%")
+importFrom(pkgcond,"%<<%")
+importFrom(pkgcond,"%<<<%")
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_lgl)
+importFrom(purrr,pmap_chr)
 importFrom(utils,head)
 importFrom(utils,limitedLabels)
 importFrom(utils,menu)
