added with_recovery utility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(recovery)
 export(recovery_ignore_function_class)
 export(recovery_ignore_namespace)
 export(recovery_opt)
+export(with_recovery)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,lag)
 importFrom(magrittr,"%>%")
