--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,13 +11,14 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 Imports: 
     dplyr,
     magrittr,
     methods,
     pkgcond,
     purrr,
-    utils
+    utils,
+    withr
 URL: https://github.com/halpo/recovery
 BugReports: https://github.com/halpo/recovery/issues
